# imturbo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.py  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanbuildenv-release-x86_64.sh  deactivate_conanrun.sh
conan-build/: Boost-Target-release.cmake  Boost-release-x86_64-data.cmake  BoostConfig.cmake  BoostConfigVersion.cmake  CMakeCache.txt  CMakePresets.json  FindSQLite3.cmake  Makefile  OpenSSL-release-x86_64-data.cmake  Poco-Target-release.cmake  Poco-release-x86_64-data.cmake  PocoConfig.cmake  PocoConfigVersion.cmake  PostgreSQL-release-x86_64-data.cmake  PostgreSQLConfigVersion.cmake  SQLite3-release-x86_64-data.cmake  SQLite3Config.cmake  SQLite3ConfigVersion.cmake  cmake_install.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanbuildenv-release-x86_64.sh  deactivate_conanrun.sh  expat-release-x86_64-data.cmake  glew-release-x86_64-data.cmake  glfw3-Target-release.cmake  glfw3-release-x86_64-data.cmake  glu-release-x86_64-data.cmake  imgui-config-version.cmake  imgui-release-x86_64-data.cmake  implot-Target-release.cmake  implot-config-version.cmake  implot-config.cmake  implot-release-x86_64-data.cmake  implotTargets.cmake  libbacktrace-release-x86_64-data.cmake  (+16 more)
include/: controller.hpp  controller_gui.hpp  oil_pump_controller.hpp
include/components/: arduino.hpp  odrive copy.hpp  odrive.hpp  oil_pressure_sensor.hpp  oil_pump.hpp
include/utils/: app_log.hpp  ffprobe_helper.hpp  imvec_operators.hpp  scrolling_plot_buffer.hpp
interfaces/arduino_sketch/: Sensors.h  Smoother.h  arduino_sketch.ino
odrive_interface/: interface.py
src/: main.cpp
